# plum-claims

./: .env.example  .gitignore  README.md  setup.sh
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/agents/: __init__.py  classifier.py  cross_doc.py  extractor.py  fraud.py  intake.py  quality.py  synthesizer.py
backend/app/api/: claims.py  policy.py
backend/app/llm/: __init__.py  client.py
backend/app/models/: __init__.py  agents.py  claim.py  decision.py  extraction.py  trace.py
backend/app/orchestrator/: __init__.py  claim_graph.py  graph_nodes.py  graph_state.py  guarded_executor.py  orchestrator.py  policy_subgraph.py  trace_recorder.py
backend/app/policy_engine/: __init__.py  calculator.py  engine.py  exclusions.py  pre_auth.py  subagents.py  waiting_period.py
backend/scripts/: generate_mock_docs.py  generate_sample_docs.py  generate_wrong_docs.py  run_eval.py
backend/tests/: conftest.py  test_orchestrator_integration.py  test_policy_engine.py
docs/: architecture.md  contracts.md  eval_report.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/claims/[id]/: page.tsx
frontend/app/flow/: page.tsx
