[project]
name = "plum-claims"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.7.0",
    "sqlmodel>=0.0.21",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "pillow>=10.4.0",
    "reportlab>=4.2.0",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
